--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,8 @@
         "react-chartjs-2": "^5.3.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.45.0",
-        "react-qr-reader": "^3.0.0-beta.1",
-        "react-qr-scanner": "^1.0.0-alpha.11",
+        "@zxing/library": "^0.21.3",
+        "qr-scanner": "^1.4.2",
         "react-router-dom": "^6.14.0",
         "react-toastify": "^11.0.5",
         "tailwind-scrollbar": "^4.0.1",
