--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,15 +17,17 @@
         "html2canvas": "^1.4.1",
         "html5-qrcode": "^2.3.8",
         "jspdf": "^3.0.1",
+        "jspdf-autotable": "^5.0.2",
         "react": "^18.2.0",
         "react-chartjs-2": "^5.3.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.45.0",
-        "@zxing/library": "^0.21.3",
-        "qr-scanner": "^1.4.2",
+        "react-qr-reader": "^3.0.0-beta.1",
+        "react-qr-scanner": "^1.0.0-alpha.11",
         "react-router-dom": "^6.14.0",
         "react-toastify": "^11.0.5",
         "tailwind-scrollbar": "^4.0.1",
+        "xlsx": "^0.18.5",
         "zustand": "^4.3.8"
     },
     "devDependencies": {
